--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2311,7 +2311,7 @@ a {
 }
 .cid-uLFTsAhFA6 {
   padding-top: 2rem;
-  padding-bottom: 6rem;
+  padding-bottom: 0rem;
   background-color: #232323;
 }
 .cid-uLFTsAhFA6 .item:focus,
@@ -2386,6 +2386,85 @@ a {
   align-items: flex-end;
 }
 .cid-uLFTsAhFA6 .grid-container-2 {
+  align-items: flex-start;
+}
+.cid-uLG2pQxoKL {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-uLG2pQxoKL .item:focus,
+.cid-uLG2pQxoKL span:focus {
+  outline: none;
+}
+.cid-uLG2pQxoKL .item {
+  cursor: pointer;
+}
+.cid-uLG2pQxoKL .grid-container {
+  grid-row-gap: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uLG2pQxoKL .grid-container {
+    grid-row-gap: 1rem;
+  }
+}
+.cid-uLG2pQxoKL .grid-container-1,
+.cid-uLG2pQxoKL .grid-container-2 {
+  gap: 0 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uLG2pQxoKL .grid-container-1,
+  .cid-uLG2pQxoKL .grid-container-2 {
+    gap: 0 1rem;
+  }
+}
+.cid-uLG2pQxoKL .mbr-section-title {
+  color: #000000;
+}
+.cid-uLG2pQxoKL .mbr-text,
+.cid-uLG2pQxoKL .mbr-section-btn {
+  color: #000000;
+}
+.cid-uLG2pQxoKL .content-head {
+  max-width: 800px;
+}
+.cid-uLG2pQxoKL .container,
+.cid-uLG2pQxoKL .container-fluid {
+  overflow: hidden;
+}
+.cid-uLG2pQxoKL .grid-container {
+  display: grid;
+  transform: translate3d(-3rem, 0, 0);
+  width: 115vw;
+  grid-column-gap: 1rem;
+}
+.cid-uLG2pQxoKL .grid-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cid-uLG2pQxoKL .grid-item img {
+  min-width: 30vw;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+@media (max-width: 767px) {
+  .cid-uLG2pQxoKL .grid-item img {
+    min-width: 35vw;
+  }
+}
+.cid-uLG2pQxoKL .grid-container-1,
+.cid-uLG2pQxoKL .grid-container-2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+}
+.cid-uLG2pQxoKL .grid-container-1 {
+  align-items: flex-end;
+}
+.cid-uLG2pQxoKL .grid-container-2 {
   align-items: flex-start;
 }
 .cid-uLFT9kv9hp {
